# CodeForge

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  build-codeforge-cli.bat  build-release-installer.bat  build-release.bat  cf.cmd  cf.ps1  package-lock.json  package.json  settings.example.json  setup-ai-clients.bat
.codeforge/: codeforge.md
.codeforge/skills/git-commit-message/: SKILL.md
.codeforge/skills/unreal-project/: SKILL.md
crates/codeforge-core/: Cargo.toml
crates/codeforge-core/src/: file_search.rs  goal_state.rs  lib.rs  office_tools.rs  workspace_tools.rs
docs/: codeforge-agent-core-plan.md  codex-desktop-integration-plan.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_runner.rs  app_state.rs  cli.rs  code_link.rs  codex_cli_runner.rs  commands.rs  goal_state.rs  history_store.rs  lib.rs  main.rs  mcp_runtime.rs  path_utils.rs  process_manager.rs  slash_command.rs  subagent_manager.rs  tool_interface.rs  tool_registry.rs  tool_trace.rs  vs_bridge_client.rs  vs_registry.rs  window_activation.rs  workspace_tools.rs
src-tauri/src/agent/: decision.rs  mod.rs  session.rs  state.rs
src-tauri/src/agent/stream/: events.rs  mod.rs  openai_sse.rs  tool_call_merge.rs
src-tauri/src/tui/: app.rs  mod.rs  terminal.rs
src-tauri/src/tui/widgets/: composer.rs  footer.rs  header.rs  mod.rs  slash_popup.rs  transcript.rs
src-tui/: Cargo.toml
src-tui/src/: app.rs  app_server_session.rs  codeforge_backend.rs  codeforge_direct_chat.rs  codeforge_entry.rs  codeforge_goal_state.rs  codeforge_tool_registry.rs  codeforge_tool_trace.rs  codeforge_trace_store.rs  codeforge_vs_bridge.rs  lib.rs  main.rs  slash_command.rs
src-tui/src/app/: background_requests.rs  event_dispatch.rs  thread_routing.rs
src-tui/src/app_server_session/: fs.rs
src-tui/src/chatwidget/: slash_dispatch.rs  status_controls.rs  tests.rs
src-tui/src/chatwidget/tests/: usage_command_tests.rs
src-tui/src/history_cell/: session.rs
src-tui/src/status/: card.rs
src/api/: tauriApi.ts
src/components/: ChatMessage.tsx  ChatTimeline.tsx  CodeLink.tsx  Composer.tsx  Profile.tsx  ProviderSettings.tsx  Settings.tsx  Sidebar.tsx  TraceDrawer.tsx  TraceEventRow.tsx  Workspace.tsx  WorkspaceHeader.tsx  WorkspaceHistoryList.tsx  codeLinkText.tsx  traceViewModel.ts
src/state/: appState.ts
src/types/: provider.ts  task.ts  trace.ts
src/utils/: providerModels.ts
tools/: mcp_smoke_server.mjs  verify_cli_layout_screenshot.py
vsix/SnowAgent.VSBridge/: BridgeHttpServer.cs  JsonUtil.cs  Models.cs  SnowAgentVsBridgePackage.cs
